--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # https://github.com/pages-themes/slate
 theme: jekyll-theme-slate
 title: Песни
-#description: Песни Ставропольской Церкви ЕХБ
+description:
 
